kubernetes/fe/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: plantmingle-fe
spec:
  replicas: 1
  selector:
    matchLabels:
      app: plantmingle-fe
  template:
    metadata:
      labels:
        app: plantmingle-fe
    spec:
      securityContext:
        runAsUser: 1000
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      containers:
      - name: plantmingle-fe
        image: cerit.io/xrehako1/plantmingle-fe-image
        imagePullPolicy: Always
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
        ports:
        - containerPort: 3001
        volumeMounts:
          - mountPath: /var/cache/nginx
            name: nginxvol
          - mountPath: /var/www/media
            name: mediavol
        resources:
          requests:
            memory: "1Gi"
            cpu: "1"
          limits:
            memory: "2Gi"
            cpu: "2"
      volumes:
        - name: nginxvol
          persistentVolumeClaim:
            claimName: plantmingle-fe-pvc-nginx
        - name: mediavol
          persistentVolumeClaim:
            claimName: plantmingle-fe-pvc-media
