kubernetes/fe/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: plantmingle-fe-svc
spec:
  type: ClusterIP
  ports:
  - name: plantmingle-fe-port
    port: 80
    targetPort: 3001
  selector:
    app: plantmingle-fe
